--- a/glossary.tex
+++ b/glossary.tex
@@ -47,5 +47,6 @@
 \newacronym{LQG}{LQG}{Linear Quadratic Gaussian}
 
 \newacronym{MV}{MV}{Munipulated Variable}
+\newacronym{OV}{OV}{Output Variable}
 
 
