--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -18,7 +18,7 @@
     Input delay refers to the time delay involved with transporting a control signal to a system, 
     whereas state delay refers to time-separated interactions between system variables \cite{Chen1999}.
     Hence, we define a state delay vector as:
-    \begin{equation}
+    \begin{equation} \label{eq:delay_vector}
         \bm{d}_{k} = 
         \begin{bmatrix}
             \bm{x}_{k-1} & \bm{x}_{k-2} & \cdots & \bm{x}_{k-q+1}
