--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -35,7 +35,7 @@
     \end{equation}
     where
     \( \bm{A} \in \R^{n_x \times n_x} \) is the system matrix, 
-    \( \bm{A}_1 \in \R^{(q-1) \cdot n_x ~ \times ~ (q-1) \cdot n_x} \) is the state delay system matrix and 
+    \( \bm{A}_d \in \R^{(q-1) \cdot n_x ~ \times ~ (q-1) \cdot n_x} \) is the state delay system matrix and 
     \( \bm{B} \in \R^{n_x \times n_u} \) is the input matrix.
     
     \paragraph
