--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -390,7 +390,7 @@
         $T_s =$~\SI{0.03}{\second} is selected as the sample time for system identification 
         because it provides a good balance between being fast enough for the multirotor dynamics and slow enough for a practical \gls{MPC} implementation.
 
-    \subsection{Choice of payload variable in the state vector}
+    \subsection{Choice of payload variable in the state vector} \label{sec:payload_state_variable}
 
         \paragraph
         As discussed in Section~\ref{sec:plant_considered}, 
