--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -6,12 +6,12 @@
     It uses temporal measurements of system outputs to reconstruct system dynamics without prior modelling assumptions.
     \gls{DMDc} is an adaptation of \gls{DMD} that also accounts for control inputs \cite{Proctor2016c}.
     This section provides an overview of the specific implementation of \gls{DMDc} used in this work.        
-    Note that this implementation is an adaptation of \gls{DMDc}, and includes time-delay-embedding of multiple observables. 
+    Note that this implementation is an adaptation of \gls{DMDc}, and includes time-delay-embedding of multiple variables. 
     Enriching a \gls{DMD} model with time-delay-embedding is a known technique and is also seen in other \gls{DMD} adaptations \cite{Korda2018b, Arbabi2018}.
 
     \paragraph
     \gls{DMD} produces a linear, discrete state-space model of system dynamics.
-    Discrete measurements, $\bm{x}_k$, of the continuous time observable, $\bm{x}(t)$, are used, 
+    Discrete measurements, $\bm{x}_k$, of the continuous time variable, $\bm{x}(t)$, are used, 
     where $\bm{x}_k = \bm{x}(k T_s)$, and $T_s$ is the sampling time of the model.    
     Delay-coordinates (i.e. $\bm{x}_{k-1}, \bm{x}_{k-2}$, etc.) are also included in the state-space model to
     account for input delay and state delay in the system.
@@ -31,12 +31,12 @@
     \paragraph
     The discrete state-space model is therefore defined as:
     \begin{equation} \label{eq:dmd_state_space}
-        \bm{x}_{k+1} = \bm{A} \bm{x}_k + \bm{A}_d \bm{d}_k + \bm{B} \bm{u}_k ,
+        \bm{x}_{k+1} = \bm{A}_{dmd} \bm{x}_k + \bm{A}_d \bm{d}_k + \bm{B}_d \bm{u}_k ,
     \end{equation}
     where
-    \( \bm{A} \in \R^{n_x \times n_x} \) is the system matrix, 
+    \( \bm{A}_{dmd} \in \R^{n_x \times n_x} \) is the system matrix, 
     \( \bm{A}_d \in \R^{(q-1) \cdot n_x ~ \times ~ (q-1) \cdot n_x} \) is the state delay system matrix and 
-    \( \bm{B} \in \R^{n_x \times n_u} \) is the input matrix.
+    \( \bm{B}_d \in \R^{n_x \times n_u} \) is the input matrix.
     
     \paragraph
     The training data consists of full-state measurements, $\bm{x}_k$, and corresponding inputs, $\bm{u}_k$, 
@@ -81,15 +81,15 @@
     and $\bm{\Upsilon}$ is the matrix of inputs.
     Equation~\ref{eq:dmd_state_space} can be combined with the matrices in Equation~\ref{eq:dmd_matrices} to produce:
     \begin{equation}
-        \bm{X^\prime} = \bm{A} \bm{X} + \bm{A}_d \bm{X}_d + \bm{B} \bm{\Upsilon} .
+        \bm{X^\prime} = \bm{A}_{dmd} \bm{X} + \bm{A}_d \bm{X}_d + \bm{B}_d \bm{\Upsilon} .
     \end{equation}
-    Note that the primary objective of \gls{DMDc} is to determine the best fit model matrices, $\bm{A}$, $\bm{A}_d$ and $\bm{B}$, 
+    Note that the primary objective of \gls{DMDc} is to determine the best fit model matrices, $\bm{A}_{dmd}$, $\bm{A}_d$ and $\bm{B}_d$, 
     given the data in $\bm{X^\prime}$, $\bm{X}$, $\bm{X}_d$, and $\bm{\Upsilon}$ \cite{Proctor2016c}.
     In order to group the unknowns into a single matrix, Equation~\ref{eq:dmd_state_space} is manipulated into the form,
     \begin{equation} \label{eq:G_Omega}
         \bm{X^\prime} =   
         \begin{bmatrix} 
-            \bm{A} & \bm{A}_d & \bm{B} 
+            \bm{A}_{dmd} & \bm{A}_d & \bm{B}_d 
         \end{bmatrix}
         \begin{bmatrix} 
             \bm{X} \\ \bm{X}_d \\ \bm{\Upsilon} 
@@ -127,7 +127,7 @@
     \end{equation}
     By reversing Equation~\ref{eq:G_Omega}, $\bm{G}$ can now be decomposed into:
     \(
-        \bm{G} = \begin{bmatrix} \bm{A} & \bm{A}_d & \bm{B} \end{bmatrix}
+        \bm{G} = \begin{bmatrix} \bm{A}_{dmd} & \bm{A}_d & \bm{B}_d \end{bmatrix}
     \)
     according to the required dimensions of each matrix.
     Thereby, the state-space model approximated by \gls{DMDc} is complete.
