Equation that shows conversion of dmd model to mpc model inserted

--- a/control/control_implementation.tex
+++ b/control/control_implementation.tex
@@ -75,7 +75,7 @@
         The system identification and control implementations are required to perform well with different unknown payload parameters.
         Therefore, numerous flights with a range of different payload were simulated, the respective models were trained and the controllers were implemented.
         Figure~\ref{fig:compare_control_vel_l1} and Figure~\ref{fig:compare_control_vel_l05} show velocity step responces with \gls{LQR} and \gls{MPC} implentations with two payloads flights.
-        Both the parameter estimation with \gls{LQR} implementation, and the DMDc with \gls{MPC} implementation, handle flights with different cable lengths and payload masses well.
+        Both the parameter estimation with \gls{LQR} implementation, and the \gls{DMDc} with \gls{MPC} implementation, handle flights with different cable lengths and payload masses well.
         In each flight, \gls{LQR} and \gls{MPC} damp the payload oscillations and control the multirotor velocity well.
 
         \input{control/plots/compare_control_vel_l-1.0_mp-0.2.tex} % subfigure
