--- a/system_id/havok.tex
+++ b/system_id/havok.tex
@@ -154,7 +154,7 @@
     \end{figure}
 
     % \paragraph
-    % ?? High level comparison of DMDc and HAVOKc
+    % ?? High level comparison of \gls{DMDc} and HAVOKc
 
 
 
